<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterNewAccountActivity" 
    android:background="#DA5024">
	 
	 <EditText
        android:id="@+id/etFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_first_name"
        android:ems="10"
        android:inputType="textPersonName" />
	 
	<EditText
        android:id="@+id/etLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFirstName"
        android:layout_alignLeft="@+id/etFirstName"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName" 
        android:hint="@string/enter_last_name" />
	 
	<EditText 
	    android:id="@+id/etEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etLastName"
        android:layout_below="@+id/etLastName"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email" /> 
        
	<EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etEmailAddress"
        android:layout_below="@+id/etEmailAddress"
        android:ems="10"
        android:inputType="textPassword" 
        android:hint="@string/enter_password">

    </EditText>
    
    <EditText
        android:id="@+id/etPasswordConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etPassword"
        android:layout_below="@+id/etPassword"
        android:ems="10"
        android:inputType="textPassword" 
        android:hint="@string/confirm_password"/>
    
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPasswordConfirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp"
        android:text="@string/register" 
        android:onClick="Register" />

</RelativeLayout>