<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" 
    android:background="#DA5024" >
    
	<TextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:clickable="true" />
    
    <!--<ImageButton
        android:id="@+id/btnLoginGoogle"
        android:contentDescription="@string/login_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLoginTwitter"
        android:layout_alignLeft="@+id/btnLogin"
        android:src="@drawable/ic_launcher" 
        />-->

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etPassword"
        android:layout_below="@+id/tvErrorMessage"
        android:background="@color/button_background"
        android:onClick="login"
        android:text="@string/login"
        android:textColor="@color/button_foreground" 
        android:minWidth="96dp"/>

    <Button
        android:id="@+id/btnRegisterAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/etEmailLogin"
        android:layout_below="@+id/tvErrorMessage"
        android:minWidth="96dp"
        android:background="@color/button_background"
        android:text="@string/register"
        android:textColor="@color/button_foreground" 
        android:onClick="registerAccount"/>

   <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etEmailLogin"
        android:layout_below="@+id/etEmailLogin"
        android:ems="10"
        android:hint="@string/enter_password"
        android:textColorHint="@color/hint_color"
        android:textColor="@color/text_color"
        android:inputType="textPassword" >

    
    </EditText>

    <EditText
        android:id="@+id/etEmailLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:textColorHint="@color/hint_color"
        android:textColor="@color/text_color"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress" 
        android:layout_marginTop="15dp"
        />

    <ImageButton
        android:id="@+id/btnLoginTwitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegisterAccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:contentDescription="@string/login_twitter"
        android:src="@drawable/sign-in-twitter" 
        android:background="@color/kinvey_orange"/>

    <ImageButton
        android:id="@+id/btnLoginFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnLoginTwitter"
        android:layout_below="@+id/btnLoginTwitter"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/login_facebook"
        android:src="@drawable/sign-in-facebook"
        android:background="@color/kinvey_orange" />
   
</RelativeLayout>